--- a/dest/style.css
+++ b/dest/style.css
@@ -165,8 +165,8 @@ body {
     .head__img {
       width: 100%; } }
   .head__img-shadow {
-    max-width: 100%;
     height: auto;
+    width: 100%;
     position: absolute;
     top: 0;
     z-index: 1; }
@@ -181,7 +181,8 @@ body {
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  text-decoration: none; }
 
 .head__insta-logo {
   max-width: 100%;
