--- a/src/styles/head-nav.scss
+++ b/src/styles/head-nav.scss
@@ -19,8 +19,8 @@ body {
       width: 100%;
     }
     &-shadow {
-      max-width: 100%;
       height: auto;
+      width: 100%;
       position: absolute;
       top: 0;
       z-index: 1;
@@ -34,6 +34,7 @@ body {
       z-index: 2;
       display: flex;
       align-items: center;
+      text-decoration: none;
     }
     &-logo {
       max-width: 100%;
