--- a/dest/style.css
+++ b/dest/style.css
@@ -157,15 +157,12 @@ body {
   color: #555559; }
 
 .head__img {
-  max-width: 100%;
   height: auto;
   vertical-align: top;
-  position: relative; }
-  @media all and (min-width: 1400px) {
-    .head__img {
-      width: 100%; } }
+  position: relative;
+  width: 100%; }
   .head__img-shadow {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     position: absolute;
     top: 0;
@@ -181,7 +178,8 @@ body {
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  text-decoration: none; }
 
 .head__insta-logo {
   max-width: 100%;
