--- a/src/styles/head-nav.scss
+++ b/src/styles/head-nav.scss
@@ -11,15 +11,12 @@ body {
 
 .head {
   &__img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     vertical-align: top;
     position: relative;
-    @media all and (min-width: 1400px) {
-      width: 100%;
-    }
     &-shadow {
-      max-width: 100%;
+      width: 100%;
       height: auto;
       position: absolute;
       top: 0;
@@ -34,6 +31,7 @@ body {
       z-index: 2;
       display: flex;
       align-items: center;
+      text-decoration: none;
     }
     &-logo {
       max-width: 100%;
